<resources>
    <string name="app_name">English Exam Preparation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_vocabulary">Vocabulary</string>
    <string name="menu_grammar">Grammar</string>
    <string name="menu_practice">Practice</string>
    <string name="menu_exam">Exam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Login Activity-->
    <string name="hint_username_input">Tên đăng nhập</string>
    <string name="hint_password_input">Mật khẩu</string>
    <string name="text_password_description">Hiện mật khẩu</string>
    <string name="text_button_register">Đăng ký</string>
    <string name="text_button_login">Đăng nhập</string>
    <string name="text_get_password">Quên mật khẩu?</string>
</resources>