<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_icon_home"
            android:checkable="true"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_vocabulary"
            android:icon="@drawable/ic_icon_vocabulary"
            android:checkable="true"
            android:title="@string/menu_vocabulary" />
        <item
            android:id="@+id/nav_grammar"
            android:icon="@drawable/ic_icon_grammar"
            android:checkable="true"
            android:title="@string/menu_grammar" />
        <item
            android:id="@+id/nav_practice"
            android:icon="@drawable/ic_practice"
            android:title="@string/menu_practice" />
        <item
            android:id="@+id/nav_exam"
            android:icon="@drawable/ic_icon_exam"
            android:title="@string/menu_exam" />
    </group>
</menu>