<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.englishexampreparation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_vocabulary"
        android:name="com.example.englishexampreparation.ui.main.vocabulary.VocabularyFragment"
        android:label="@string/menu_vocabulary"
        tools:layout="@layout/fragment_vocabulary" />
    <fragment
        android:id="@+id/nav_grammar"
        android:name="com.example.englishexampreparation.ui.main.grammar.GrammarFragment"
        android:label="@string/menu_grammar"
        tools:layout="@layout/fragment_grammar" />

    <fragment
        android:id="@+id/nav_practice"
        android:name="com.example.englishexampreparation.ui.main.practice.PracticeFragment"
        android:label="@string/menu_practice"
        tools:layout="@layout/fragment_practice" />
    <fragment
        android:id="@+id/nav_exam"
        android:name="com.example.englishexampreparation.ui.main.exam.ExamFragment"
        android:label="@string/menu_exam"
        tools:layout="@layout/fragment_exam" />
</navigation>